--- a/BallDroppings.htm
+++ b/BallDroppings.htm
@@ -70,6 +70,13 @@
 				Legge Til/Fjerne Emittere.(Lage Emitter'array?)
 				Lagre Banen.
 				Laste Banen.
+
+        //  converted to English:
+        Move Entire Lines.
+        Move Emitter (s).
+        Add / Remove Emitters (Create Emitter Array?)
+        Save the Path.
+        Load the Path.
 			-->
 		
 		
