--- a/BallDroppings.htm
+++ b/BallDroppings.htm
@@ -58,10 +58,10 @@
 			</span>
 		</div>
 		<div style="position:absolute;bottom:0px;left:30%;right:30%;display:none;" id="HelpWrapper">
-      BallDroppings was originally made by: <a href="https://github.com/jtnimoy/BallDroppings">Josh Nimoy</a>
+      BallDroppings was originally made by: <a href="https://github.com/jtnimoy/BallDroppings">Josh Nimoy</a> in 2003.
        It was then hacked by <a href="http://www.thaoh.net/">Thaoh Myrdania</a> and 
        <a href="http://www.jimckf.com/">Jckf</a>. &nbspIn Oct 2020, 
-       <a href="http://www.derelllicht.com/">Derell Licht</a> modified this program
+       <a href="http://github.com/DerellLicht/BallDroppings">Derell Licht</a> modified this program
        to fix issues with sound files, eliminating the sound.swf file.
 		</div>
 		<div style="position:absolute;bottom:10px;right:0px;">Balls: <input id="d_balls" style="width:35px;background-color:#000;color:#fff;font-weight:bold;border:0px;" disabled="disabled" value="1" type="text"><a href="#" style="color:#f80;" title="Click me, fool!" onclick="if (document.getElementById('ControlWrapper').style.display == '') {togglehidden('ControlWrapper');togglehidden('HelpWrapper');} else {togglehidden('HelpWrapper');}">Help</a></div>
